Add english translations for intro and conclusions

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -30,13 +30,13 @@ Precisamente, los \glspl{bess} son una comparativamente novedosa tecnología ene
 
 Aún y todo, no sirve con disponer únicamente de las baterías, sino que, más que nada, es justamente imprescindible controlar la carga y descarga de estos dispositivos cuidadosamente para prolongar su vida útil y asegurar el correcto funcionamiento de los mismos. Como las baterías cuentan con un \gls{capex} inicialmente considerable, pero un \gls{opex} mínimo~\cite{larsson2018cost}, lo que se busca es su rentabilidad mediante el beneficio generado a través del arbitraje de la energía almacenada en el mercado eléctrico.
 
-Es entonces cuando surge la necesidad de la creación de un sistema de optimización de baterías en el mercado eléctrico basado en el \gls{iiot}, el cual gestione tanto la infraestructura operacional, el entorno de mercado, la modelización estructural y el comando y control, continuamente ciclando la batería indefinidamente en busca de los mejores márgenes. Aún siendo posible realizar parte de dicha gestión manualmente, la complejidad y velocidad de los mercados (teniendo en especial consideración las recientes actualizaciones~\cite{cnmc2025resolucion, omie2025instruccion}), hacen que la automatización sea altamente relevante.
+Es entonces cuando surge la necesidad de la creación de un sistema de optimización de baterías en el mercado eléctrico basado en el \gls{iiot}, el cual gestione tanto la infraestructura operacional, el entorno de mercado, la modelización estructural y el comando y control, continuamente ciclando la batería indefinidamente en busca de los mejores márgenes. Aún siendo posible realizar parte de dicha gestión manualmente, la complejidad y velocidad de los mercados (teniendo en especial consideración las recientes actualizaciones~\cite{cnmc2025resolucion, omie2025instruccion}) hacen que la automatización sea altamente relevante.
 
 De hecho, así es como nace \textsc{Optibat}, el sistema de optimización de baterías en el mercado eléctrico de desarrollo propio desplegado satisfactoriamente en múltiples instalaciones energéticas a lo largo del país, que mueve docenas de megavatios hora al día y genera millones de euros de ingresos previstos al año. Consigue solucionar el trabajo de licitación manual de los agentes de mercado a través de la colaboración con los operadores de telecontrol, previamente necesario para la incorporación en el mercado de las posiciones de las baterías.
 
 Con esto, se detallan las decisiones de diseño relacionadas con la integración del sistema y los componentes de la arquitectura ya existentes (es decir, aspectos fundamentales de la operación que la entidad energética dueña de los activos energéticos tiene disponibles con anterioridad), el desarrollo con respecto a la creación de todos los elementos propios a tener en cuenta, la validación para asegurar la seguridad y correcto funcionamiento, el despliegue en relación a la puesta en marcha en instalaciones a gran escala y la experimentación comparativa en busca del mejor modo de operación.
 
-De esta forma, el sistema se divide en los apartados anteriormente mencionados. La infraestructura operacional, explicada en el capítulo~\ref{makereference3}, gestiona la capa de interacción de menor nivel disponible. El entorno de mercado, especificado en el capítulo~\ref{makereference4}, determina la información extraída de las instituciones regulatorias con las que se trabaja. La modelización estructural, puntualizada en el capítulo~\ref{makereference5}, habla de la lógica de negocio de las decisiones a tomar. El comando y control, precisado en el apartado~\ref{makereference6}, explica el flujo de vuelta a los activos físicos y la interacción de los agentes de mercado y operadores de telecontrol con el sistema. Finalmente, se describe la experimentación realizada en el capítulo~\ref{makereference7}.
+De esta forma, el sistema se divide en los apartados anteriormente mencionados. La infraestructura operacional, explicada en el capítulo~\ref{makereference3}, gestiona la capa de interacción de menor nivel disponible. El entorno de mercado, especificado en el capítulo~\ref{makereference4}, determina la información extraída de las instituciones regulatorias con las que se trabaja. La modelización estructural, puntualizada en el capítulo~\ref{makereference5}, habla de la lógica de negocio de las decisiones a tomar. El comando y control, precisado en el capítulo~\ref{makereference6}, explica el flujo de vuelta a los activos físicos y la interacción de los agentes de mercado y operadores de telecontrol con el sistema. Finalmente, se describe la experimentación realizada en el capítulo~\ref{makereference7}.
 
 \section{Objetivos}
 \label{makereference1.1}
@@ -59,9 +59,9 @@ A su vez, se definen varios objetivos secundarios complementarios al objetivo pr
 
   \item[Facilitar la monitorización del sistema] Una interfaz de comando y control, que permita a los operadores de telecontrol y agentes de mercado supervisar el estado del sistema en tiempo real, ayuda a aumentar la confianza en el mismo. Esta interfaz debe proporcionar una visualización clara de las operaciones planificadas y ejecutadas y los resultados económicos obtenidos, garantizando la transparencia y la trazabilidad de las decisiones del sistema. Crucialmente, los agentes de mercado deben ser capaces de sobrescribir el comportamiento automático del sistema con indicaciones manuales ante situaciones de mercado no tenidas en cuenta, o periodos de prueba en el caso de los operadores de telecontrol.
 
-  \item[Responder ante fallos] Se dota al sistema de mecanismos de detección y gestión de fallos, tanto internos como, principalmente, externos, para asegurar su robustez y alta disponibilidad. Esto incluye la capacidad de gestionar interrupciones en la operación de la disponibilidad de los activos físicos o la pérdida o información incompleta de los datos de mercado, debiendo tener en cuenta dichas situaciones explícitamente de tal forma que el funcionamiento del sistema, más allá de dicha particularidad, no se vea afectado. Medido programáticamente mediante el número indisponibilidades no causadas por factores externos, sino por el sistema.
+  \item[Responder ante fallos] Se dota al sistema de mecanismos de detección y gestión de fallos para asegurar su robustez y alta disponibilidad. Esto incluye la capacidad de gestionar interrupciones en la operación de la disponibilidad de los activos físicos o la pérdida o información incompleta de los datos de mercado, debiendo tener en cuenta dichas situaciones explícitamente de tal forma que el funcionamiento del sistema, más allá de dicha particularidad, no se vea afectado. Medido programáticamente mediante el número indisponibilidades no causadas por factores externos, sino por el sistema.
 
-  \item[Analizar la viabilidad económica] Utilizando los datos operativos y los resultados del sistema se busca realizar un análisis de viabilidad económica posterior. El objetivo es validar el caso de negocio, cuantificar con precisión la rentabilidad obtenida teniendo en cuenta los \glspl{capex} y \glspl{opex} y modelar el rendimiento financiero del activo bajo diferentes escenarios de mercado. Este análisis sirve para refinar las estrategias de operación y guiar futuras inversiones en los sistemas de almacenamiento de energía en baterías, intentando validar así la aparente predisposición al beneficio de las baterías como activo energético. Se mide en euros megavatio hora relativos. Se trata de un análisis posterior ya que se considera con anterioridad la tesis del beneficio de rentabilidad de los \glspl{bess}.
+  \item[Analizar la viabilidad económica] Utilizando los datos operativos y los resultados del sistema se busca realizar un análisis de viabilidad económica posterior. El objetivo es validar el caso de negocio, cuantificar con precisión la rentabilidad obtenida teniendo en cuenta los \glspl{capex} y \glspl{opex} y modelar el rendimiento financiero del activo bajo diferentes escenarios de mercado. Este análisis sirve para refinar las estrategias de operación y guiar futuras inversiones en los sistemas de almacenamiento de energía en baterías, intentando validar así la aparente predisposición al beneficio de las baterías como activo energético. Se mide en euros megavatio hora relativos al coste.
 
 \end{description}
 
@@ -137,14 +137,13 @@ El plan de trabajo consta de la distribución en tareas del desarrollo del proye
   \label{fig:plan-trabajo}
 \end{figure}
 
-% TODO
 \begin{description}
 
   \item[Estudio de la normativa] Investigación de la regulación del mercado eléctrico.
 
   \item[Formación en el mercado eléctrico] Formación sobre el funcionamiento y los procesos del mercado eléctrico.
 
-  \item[Formación en baterías] Estudio de las características técnicas de los \gls{bess}.
+  \item[Formación en baterías] Estudio de las características técnicas de los \glspl{bess}.
 
   \item[Evaluación de las herramientas] Análisis de las herramientas existentes y elección de las tecnologías.
 
