--- a/chapter8.tex
+++ b/chapter8.tex
@@ -20,7 +20,7 @@ A su vez, desde la perspectiva del cumplimiento de los objetivos secundarios, se
 
 Por otro lado, según el punto de vista de la arquitectura, después de analizar las configuraciones topológicas con las que trabaja el sistema, se ha unificado e implantado la nueva infraestructura operacional para tanto la adquisición de datos de los \glspl{bess} como el control de la carga y descarga de la misma, con el resto de componentes ya existentes de la red. Concretamente, se ha hecho uso de protocolos de comunicación industriales para intercambiar información con los activos energéticos e introducir la integración de las baterías con el \gls{pis}, que realiza la labor de historiador guardando los estados de las señales físicas a lo largo del tiempo para su posterior consulta. Con ello, se ha configurado la política de obtención de datos mediante mecanismos espontáneos y de \gls{gi} y se ha facilitado su lectura. De esta forma, se dibuja una paralela con las conocidas fases de un projecto de \gls{iiot}, sensorización, procesamiento, gestión y actuación.
 
-Junto a esto, se ha obtenido la información del entorno de mercado a través de las interfaces proporcionadas por las instituciones oficiales correspondientes, el \gls{mo} y el \gls{tso}. La información se ha procesado y transformado en el formato adecuado para su almacenamiento masivo en base de datos, la cual ha tenido que ser consultada eficientemente. Para ello, se ha hecho uso de procesos periódicos temporizados según los programas de mercado.
+Junto a esto, se ha obtenido la información del entorno de mercado a través de las interfaces proporcionadas por las instituciones oficiales correspondientes, el \gls{mo} y el \gls{tso}. La información se ha procesado y transformado en el formato adecuado para su almacenamiento masivo en el \gls{dw}, la cual ha tenido que ser consultada eficientemente. Para ello, se ha hecho uso de procesos periódicos temporizados según los programas de mercado.
 
 Más allá, se ha realizado un trabajo de modelización estructural de la situación física de las instalaciones, con el propósito de determinar la solución optima al problema de ciclado de energía de las instalaciones. Mediante un lenguaje de modelado abstracto, se han definido los comportamientos físicos de todos los tipos de instalaciones, desde las menos complejas, como las aisladas, a las más complejas, como las híbridas. Precisamente, se ha incorporado en el modela la lógica de la totalidad de los activos energéticos, tanto de almacenamiento como de generación.
 
@@ -35,7 +35,7 @@ Cabe destacar que tanto los \glspl{bess} como, por lo tanto, los sistemas de opt
 
 En cuanto al trabajo futuro, \textsc{Optibat} se encuentra limitado al arbitraje en los mercados spot: diario, intradiarios y continuo. Aún así, existen otros mercados más o menos rentables~\cite{cnmc2024balance}, como los mercados de \gls{mfrr} y \gls{afrr} que negocian disponibilidades. Resulta interesante añadir soporte a estos mercados para completar así el perfil de arbitraje de estas tecnologías de almacenamiento, ya que las baterías también son idóneas para la operación en dichos mercados debido a sus altas capacidades de conmutación.
 
-Si bien la integración con los mercados de regulación es definitivamente la mejora más notable a realizar, también aporta beneficio refinar la modelización del desgaste de las baterías~\cite{shamarova2022review}. Mediante la incorporación de señales aún más granulares y las especificaciones del \gls{bms}, es posible modelizar incluso el imperceptible desgaste mismo del \gls{soc} de las baterías en reposo. Ciertamente, aunque no sea un aspecto sumamente prioritario, debido al constante ciclado de las baterías que, por naturaleza, no busca precisamente el mantenimiento en estado estacionario, el aporte sustancial toma forma del aumento de fidelidad de los procesos físicos modelados. Además, un análisis en profundidad del desgaste sufrido por la batería, más allá del consumo de los ciclos para los que está calificada por el fabricante, brinda claridad a posibles optimizaciones del beneficio obtenido bajo condiciones más adversas que las experimentadas.
+Si bien la integración con los mercados de regulación es definitivamente la mejora más notable a realizar, también aporta beneficio refinar la modelización del desgaste de las baterías~\cite{shamarova2022review}. Mediante la incorporación de señales aún más granulares y las especificaciones del \gls{bms} (adaptando el sistema a cada batería), es posible modelizar incluso el imperceptible desgaste mismo del \gls{soc} de las baterías en reposo. Ciertamente, aunque no sea un aspecto sumamente prioritario, debido al constante ciclado de las baterías que, por naturaleza, no busca precisamente el mantenimiento en estado estacionario, el aporte sustancial toma forma del aumento de fidelidad de los procesos físicos modelados. Además, un análisis en profundidad del desgaste sufrido por la batería, más allá del consumo de los ciclos para los que está calificada por el fabricante, brinda claridad a posibles optimizaciones del beneficio obtenido bajo condiciones más adversas que las experimentadas.
 
 Junto a ello, el trabajo futuro más realista viene dado en forma de la implantación del sistema de optimización desarrollado en el creciente número de nuevas instalaciones híbridas con activos energéticos de almacenamiento en incorporación continua a la red. Como ya se ha detallado anteriormente, los \glspl{bess}, al ser todavía una tecnología no tan ampliamente establecida, se encuentran en continuo crecimiento. De hecho, incluso durante el proceso de desarrollo se hizo disponible un nuevo sistema de almacenamiento.
 
