--- a/principal.tex
+++ b/principal.tex
@@ -86,6 +86,8 @@
 \input{chapter6.tex}
 \input{chapter7.tex}
 \input{chapter8.tex}
+\input{chapter9.tex}
+\input{chapter10.tex}
 
 \nocite{*}
 \bibliographystyle{styles/plain}
