--- a/chapter7.tex
+++ b/chapter7.tex
@@ -23,14 +23,12 @@ Aún así, se ha estudiado el rendimiento obtenido por el sistema, analizando su
 
 De esta forma, la métrica principal a analizar resulta siempre ser el beneficio obtenido en euros megavatio hora. La razón del uso de un beneficio dependiente de la energía es el hecho de que no querer necesariamente vender la mayor cantidad disponible en todo momento, generando grandes ingresos puntuales pero perdiendo la capacidad de aumentarlos en un futuro. Lo que se busca, en cambio, es el \textit{spread}, siendo la diferencia entre el precio al que se ha vendido y comprado una unidad de energía.
 
-Con ello, la configuración operativa del sistema se mantiene en un \textit{spread} mínimo objetivo de \SI{60}{\text{\euro}\per\mega\watt\hour} y una cantidad de ciclos máximos diarios de 1. El resto de parámetros operativos varían según la instalación controlada.
-
 \section{Rentabilidad}
 \label{makereference7.1}
 
 En primer lugar, es necesario conocer la información de costes para determinar si verdaderamente merece la pena la incorporación de \glspl{bess} en la red eléctrica, más allá de sus beneficios operativos.
 
-Una batería, similar a las usadas, de \SI{20}{\mega\watt\hour} \( E_{n} \), \SI{5}{\mega\watt} \( P_{n} \), 90\% de eficiencia \( \eta \), 2\% de degradación anual \( \delta \), una vida útil de 30 años \( H \) y 1 ciclo por día \( N \), suponiendo un \textit{spread} \( S \) de \SI{60}{\text{\euro}\per\mega\watt\hour}, genera \SI{8\,958\,504}{\text{\euro}} de ingreso \( \pi \), según la ecuación~\ref{eq:beneficio-total}.
+Un arquetipo de batería dimensionada en \SI{20}{\mega\watt\hour} \( E_{n} \), \SI{5}{\mega\watt} \( P_{n} \), 90\% de eficiencia \( \eta \), 2\% de degradación anual \( \delta \), una vida útil de 30 años \( H \) y 1 ciclo por día \( N \), suponiendo un \textit{spread} \( S \) estándar de \SI{60}{\text{\euro}\per\mega\watt\hour}, genera \SI{8\,958\,504}{\text{\euro}} de ingreso \( \pi \), según la ecuación~\ref{eq:beneficio-total}.
 
 \begin{equation}
   \label{eq:beneficio-total}
